lobby joining and exiting working
